Added minor changes;

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,7 +4,7 @@
 
 //Node modules
 @import "/node_modules/choices.js/public/assets/styles/choices.css";
-
+@import "/node_modules/lenis/dist/lenis.css";
 //Ui
 @import '../ui/ui';
 
