--- a/src/views/_includes/blocks/header.pug
+++ b/src/views/_includes/blocks/header.pug
@@ -26,7 +26,7 @@ header.header
                 .header__logo Logo
                 .header__menu
                     +menu-button
-                nav.header__nav.visible-xl
+                nav.header__nav.visible-lg
                     ul
                         li
                             a(href="#") Emergency
