--- a/src/scss/blocks/header.scss
+++ b/src/scss/blocks/header.scss
@@ -6,7 +6,7 @@
   background: white;
   box-shadow: 0 4px 8px 0 #00000040;
 
-  @include up(lg) {
+  @include up(md) {
     box-shadow: none;
   }
 
@@ -96,11 +96,13 @@
     line-height: 30px;
     order: 1;
 
-    @include up(lg) {
+    @include up(md) {
       order: 0;
+      margin: 0 25px 0 0;
+    }
+    @include up(lg) {
       width: 100px;
       height: 50px;
-      margin: 0 25px 0 0;
       font-size: 42px;
       line-height: 50px;
     }
@@ -116,6 +118,11 @@
     display: flex;
     list-style: none;
     gap: 20px;
+
+    @include up(md) {
+      order: 0;
+      margin: 0 25px 0 0;
+    }
 
     @include up(lg) {
       margin-left: 20px;
@@ -169,9 +176,12 @@
     align-items: center;
     order: 1;
 
-    @include up(lg) {
+    @include up(md) {
       order: 0;
       margin-left: auto;
+    }
+
+    @include up(lg) {
       gap: 20px;
     }
   }
