--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -27,22 +27,23 @@ block content
                 )
             .form__field
                 +input({
-                    label: 'Имя',
-                    id: 'name',
-                    errorMessage: 'Имя is required',
+                    label: 'Телефон',
+                    id: 'phone',
+                    errorMessage: 'Tel is required',
                 })(
-                    type='text',
-                    name='name',
+                    type='tel',
+                    name='phone',
+                    value='+7'
                     required
                 )
             .form__field
                 +input({
                     label: 'Имя',
-                    id: 'name',
-                    errorMessage: 'Имя is required',
+                    id: 'email',
+                    errorMessage: 'Email is required',
                 })(
-                    type='text',
-                    name='name',
+                    type='email',
+                    name='email',
                     required
                 )
             .form__button
@@ -51,4 +52,5 @@ block content
                     type: 'button'
                 }).button.button--wide.button-small.button-tablet-medium.button-desktop-large
             .form__policy.body-12.body-reg Оставляя заявку, вы соглашаетесь на обработку ваших персональных данных на условиях, определяемых <a href="##">политикой конфиденциальности</a>
+
 
