--- a/src/views/_includes/blocks/header.pug
+++ b/src/views/_includes/blocks/header.pug
@@ -2,7 +2,7 @@ include ../mixins/svgsprite
 include ../../../ui/button-inner/button-inner
 include ../../../ui/menu-button/menu-button
 
-header.header
+header.header.js-header
     .header__top
         .container
             .header__top-wrapper
