--- a/src/views/_includes/blocks/top-menu-dropdown.pug
+++ b/src/views/_includes/blocks/top-menu-dropdown.pug
@@ -1,6 +1,6 @@
 include ../mixins/svgsprite
 
-.top-menu-dropdown.js-menu-top-content
+.top-menu-dropdown.js-menu-top-content(data-lenis-prevent)
     .top-menu-dropdown__wrapper
         .top-menu-dropdown__categories
             .top-menu-dropdown__categories-content
