--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -7,7 +7,17 @@ block content
     include ../ui/button/button
     include _includes/blocks/header
     include _includes/blocks/top-menu-dropdown
+    .container
+        .body-18
+            | Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed varius semper tempor. Quisque neque purus, consectetur in ligula id, aliquet vehicula dolor. Vestibulum rutrum congue turpis, congue ornare diam laoreet aliquam. Nullam a mauris odio. Proin at auctor lectus, vel suscipit odio. Vivamus scelerisque molestie imperdiet. Donec auctor lacus eget felis laoreet dapibus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Quisque vel tristique nisl. Fusce varius ligula ac diam congue, eu ullamcorper mi pellentesque.
 
+            | Suspendisse nulla nulla, laoreet non eros id, auctor facilisis augue. Aliquam gravida consectetur ligula, ut ultrices neque. Proin rutrum eu nisl a tempus. Quisque nec molestie nisl. Nullam sit amet viverra ligula, elementum tristique mauris. Etiam aliquam, sapien eget dignissim pharetra, nisi justo gravida purus, quis posuere risus erat in risus. Praesent nec ligula risus. Duis arcu elit, aliquam lacinia condimentum blandit, lobortis id nisl.
+
+            | Suspendisse eget sem hendrerit, accumsan ex at, feugiat nisi. Mauris tempor interdum fringilla. Integer eget nisi ut neque congue elementum ac a arcu. Aenean gravida lacus ac mollis interdum. Aenean dapibus id lorem et volutpat. Vivamus maximus ipsum vitae dui posuere sollicitudin. Aenean varius, quam at suscipit pharetra, ligula nunc convallis felis, vel facilisis purus felis in sem. In a tincidunt quam. Cras id risus vel libero convallis condimentum et eu velit. Praesent est libero, malesuada ac pharetra vitae, auctor sed augue.
+
+            | Integer laoreet lectus neque, quis venenatis leo scelerisque at. Praesent quis nisi sit amet nibh blandit lacinia. Nullam egestas velit non ultrices dignissim. Morbi quis augue quis metus eleifend pretium nec quis nisi. Nam tristique dignissim rhoncus. Sed bibendum dui non aliquet commodo. In dignissim dui et est lacinia, nec convallis nisi fermentum. Sed elementum tempor leo, sed mollis ipsum aliquam malesuada. Vestibulum mi purus, ultricies finibus suscipit sit amet, congue imperdiet dolor. Nullam vitae dui nisl.
+
+            | Fusce sapien mi, rhoncus ac scelerisque sed, porta id sem. Proin sit amet dolor quis elit rhoncus fringilla. Nullam metus purus, gravida et justo ut, pellentesque viverra mauris. Nulla quis augue non dui accumsan facilisis. Aenean semper leo a augue auctor, eu fermentum leo pharetra. In hac habitasse platea dictumst. Cras ultricies, augue id tempor bibendum, elit nibh ultricies arcu, ut luctus leo mauris in velit. Interdum et malesuada fames ac ante ipsum primis in faucibus. Maecenas sodales metus mi, a elementum sem porta sed. Sed consectetur quam a sem imperdiet finibus at sit amet leo. Pellentesque commodo eu tellus eu malesuada. Aenean eleifend eu ex quis cursus.
     +modal(
         'example-modal',
         '',
