--- a/src/scss/blocks/header.scss
+++ b/src/scss/blocks/header.scss
@@ -3,11 +3,20 @@
 
 .header {
   width: 100%;
+  z-index: 1000;
   background: white;
   box-shadow: 0 4px 8px 0 #00000040;
+  transition: all .2s ease;
+  transform: translateY(0);
 
   @include up(md) {
     box-shadow: none;
+  }
+
+  &.sticky {
+    position: sticky; /* Позиционирование sticky */
+    top: 0; /* Шапка будет фиксироваться сверху */
+    transition: top 0.3s ease;
   }
 
   &__top {
