--- a/src/ui/ui-menu/ui-menu.pug
+++ b/src/ui/ui-menu/ui-menu.pug
@@ -1,6 +1,6 @@
 nav.ui-menu
     ul.ui-menu-list.js-ui-menu-list
-        li.ui-menu-item.js-ui-menu-item(data-target="buttons") Buttons
+        li.ui-menu-item.js-ui-menu-item.active(data-target="buttons") Buttons
         li.ui-menu-item.js-ui-menu-item(data-target="inputs") Inputs
         li.ui-menu-item.js-ui-menu-item(data-target="selects") Selects
         li.ui-menu-item.js-ui-menu-item(data-target="titles") Titles
